style: fix navbar menu button overflow

--- a/components/Navbar/Navbar.module.css
+++ b/components/Navbar/Navbar.module.css
@@ -5,9 +5,6 @@
 }
 
 .button {
-  position: absolute;
-  right: 0%;
-  top: 0%;
   z-index: 10;
 }
 
